--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
-    "sass": "^1.55.0"
+    "react-slick": "^0.29.0",
+    "sass": "^1.55.0",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
