--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "redux": "^4.2.0",
     "sass": "^1.55.0",
     "slick-carousel": "^1.8.1"
   },
