--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-spinners": "^0.13.6",
     "redux": "^4.2.0",
     "sass": "^1.55.0",
     "slick-carousel": "^1.8.1"
