--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-spinners": "^0.13.6",
+    "react-toastify": "^9.0.8",
     "redux": "^4.2.0",
     "sass": "^1.55.0",
     "slick-carousel": "^1.8.1"
